--- a/public/style.css
+++ b/public/style.css
@@ -4,14 +4,13 @@
 
  
 .layout{
-    background-color: #800000;
-color: #FFFDD0;
+color:#FFFF;
   font-family: "Roboto";
 
     font-size:22px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: .5fr 1.8fr 1.5fr 1.5fr 1fr;
+    grid-template-rows: .2fr 0.7fr 0.6fr .7fr .7fr;
     grid-template-areas: "header"
                          "aboutme"
                          "techxpo"
@@ -21,8 +20,6 @@ color: #FFFDD0;
 
 nav {
     font-family: "Rowdies",'Times New Roman', Times, serif;
-    display: none;
-    background-color:#FFFDD0;
     color:   #800000;;
 
 }
@@ -32,9 +29,13 @@ nav {
     background-color: #000435;
 }
 .aboutme{
-    background-color: blue;
      grid-area: aboutme;
 }
+
+.aboutMeContent{
+    box-shadow: 0px 0px 30px rgba(76, 0, 130, 0.459); 
+}
+
 .aboutmeunderline{position: relative
 }
 .aboutmeunderline::before{
@@ -42,8 +43,9 @@ nav {
     background-color: chocolate;
     position: absolute;
     bottom: 0px;
-    left: 0px;
-    width: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60px;
     height: 3px;
     border-radius: 5px;
 
@@ -64,7 +66,7 @@ nav {
     bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
-    width: 182px;
+    width: 183px;
     height: 3px;
     border-radius: 5px;
 
@@ -93,4 +95,11 @@ nav {
      grid-area: footer;
      background-color: #000435;
      color:whitesmoke;
+}
+
+.active{
+    text-decoration: underline;
+    color: #EB5B00;
+    text-decoration-thickness: 5px;
+    text-decoration-color: #800000;
 }
