--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&display=swap');
 
+#Fullpic{
+    animation: fade 5s ease-in-out;
+}
+@keyframes fade{
+    from {opacity: 1;}
+      to {opacity: 0;}
+}
 
 
 .loader{
